--- a/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
@@ -22,6 +22,13 @@
     <div id="formContent">
         <input type="hidden" asp-for="@Model.TuraId" />
         <input type="hidden" asp-for="@Model.DaniOdrzavanjaPreIzmene" />
+        <input type="hidden" asp-for="@Model.PostojiVec" />
+
+        @if (Model.PostojiVec != null && Model.PostojiVec != 0)
+    {
+        <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Već postoji tura sa tim nazivom. <i class="fas fa-exclamation-triangle"></i></div>
+    }
+
     <label class="form-control">Naziv ture:</label>  <textarea class="form-control" style=" width: 90%;" asp-for="OvaTura.NazivTure" required ></textarea>
     <label class="form-control select-fit-text"><b>Trenutno se tura održava danima: @Model.VecIzabraniDaniString</b></label>
     <label class="form-control select-fit-text">Izaberite <b>sve</b> dane održavanja ove ture:</label> 
