--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostDodaj.cshtml
@@ -16,6 +16,13 @@ ViewData["Title"]="Nova znamenitost";
 
    @if(SessionClass.TipKorisnika=="A"){
 <form method="post">
+  <input type="hidden" asp-for="@Model.PostojiVec" />
+
+      @if (Model.PostojiVec != null && Model.PostojiVec != 0)
+      {
+        <div class="alert alert-danger" role="alert" style="text-align: center;"><i class="fas fa-exclamation-triangle"></i> Već postoji znamenitost sa tim nazivom. <i class="fas fa-exclamation-triangle"></i></div>
+      }
+
     <div class="dodaj">
         <div id="formContent">
         <label class="form-control">Naziv:</label> <input asp-for="NovaZnamenitost.NazivZnamenitosti" class="form-control" placeholder="Naziv" required />
