--- a/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraIzmeni.cshtml
@@ -23,6 +23,7 @@
         <input type="hidden" asp-for="@Model.TuraId" />
         <input type="hidden" asp-for="@Model.DaniOdrzavanjaPreIzmene" />
         <input type="hidden" asp-for="@Model.PostojiVec" />
+        <input type="hidden" asp-for="@Model.TrenutniNaziv" />
 
         @if (Model.PostojiVec != null && Model.PostojiVec != 0)
     {
